new criteria downloaded

--- a/download_2023.ipynb
+++ b/download_2023.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/andrea/.virtualenvs/data-science/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import requests\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +91,10 @@
       "Downloaded 315_64_criteri_02.pdf\n",
       "Downloaded 315_64_criteri_05.pdf\n",
       "Downloaded 315_64_criteri_07.pdf\n",
-      "Downloaded 315_64_criteri_08.pdf\n"
+      "Downloaded 315_64_criteri_08.pdf\n",
+      "Downloaded 315_64_criteri_03.pdf\n",
+      "Downloaded 315_64_criteri_06.pdf\n",
+      "Downloaded 315_64_criteri_06_rett.pdf\n"
      ]
     }
    ],
@@ -113,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +235,22 @@
       "Downloaded 315_62_criteri_area_31.pdf\n",
       "Downloaded 315_62_criteri_area_15.pdf\n",
       "Downloaded 315_62_criteri_area_24.pdf\n",
-      "Downloaded 315_62_criteri_integr_area_18.pdf\n"
+      "Downloaded 315_62_criteri_integr_area_18.pdf\n",
+      "Downloaded 315_62_criteri_area_10.pdf\n",
+      "Downloaded 315_62_criteri_area_22.pdf\n",
+      "Downloaded 315_62_err_corr_criteri_area_10.pdf\n",
+      "Downloaded 315_62_err_corr_2_criteri_area_10.pdf\n",
+      "Downloaded 315_62_criteri_area_rett_24.pdf\n",
+      "Downloaded 315_62_criteri_area_06.pdf\n",
+      "Downloaded 315_62_criteri_area_01.pdf\n",
+      "Downloaded 315_62_criteri_area_20.pdf\n",
+      "Downloaded 315_62_criteri_area_26.pdf\n",
+      "Downloaded 315_62_criteri_area_30.pdf\n",
+      "Downloaded 315_62_criteri_area_35.pdf\n",
+      "Downloaded 315_62_criteri_area_12.pdf\n",
+      "Downloaded 315_62_criteri_34.pdf\n",
+      "Downloaded 315_62_criteri_28.pdf\n",
+      "Downloaded 315_62_criteri_04.pdf\n"
      ]
     }
    ],
@@ -244,6 +271,13 @@
     "        pdf.close()\n",
     "        print('Downloaded ' + filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
