downloaded new criteria

--- a/download_2023.ipynb
+++ b/download_2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,8 @@
       "Downloaded 315_62_criteri_area_12.pdf\n",
       "Downloaded 315_62_criteri_34.pdf\n",
       "Downloaded 315_62_criteri_28.pdf\n",
-      "Downloaded 315_62_criteri_04.pdf\n"
+      "Downloaded 315_62_criteri_04.pdf\n",
+      "Downloaded 315_62_criteri_rett_area_20.pdf\n"
      ]
     }
    ],
@@ -271,13 +272,6 @@
     "        pdf.close()\n",
     "        print('Downloaded ' + filename)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
